--- a/src/App.css
+++ b/src/App.css
@@ -401,6 +401,10 @@ canvas {
     justify-content: center;
     align-items: center;
   }
+
+  .preview-image{
+    aspect-ratio: 1 / 1.4;
+  }
 }
 
 @media (max-width: 480px) {
