--- a/src/App.css
+++ b/src/App.css
@@ -641,3 +641,23 @@ canvas {
   z-index: 10;
   border-radius: 15px;
 }
+
+
+.camera-wrapper {
+  position: relative;
+  width: 480px;
+  height: 640px;
+}
+
+.webcam {
+  width: 100%;
+  height: 100%;
+  border-radius: 12px;
+}
+
+.overlay {
+  position: absolute;
+  top: 0;
+  left: 0;
+  pointer-events: none;
+}
