--- a/src/App.css
+++ b/src/App.css
@@ -128,24 +128,24 @@ canvas {
 
 
 .camera-wrapper {
-  position: relative;
+  /* position: relative;
   width: 100%;
   aspect-ratio: 4 / 3;
   border-radius: 20px;
   overflow: hidden;
   background: black;
-  transition: 0.3s ease;
+  transition: 0.3s ease; */
 }
 
 .camera-wrapper video {
-  display: block;
+  /* display: block; */
 }
 
 .camera-wrapper video,
 .camera-wrapper {
-  width: 100%;
+  /* width: 100%;
   height: 100%;
-  object-fit: cover;
+  object-fit: cover; */
 }
 
 .camera-wrapper.glow {
@@ -170,7 +170,7 @@ canvas {
 .face-badge {
   position: absolute;
   top: 15px;
-  right: 15px;
+  /* right: 15px; */
   background: rgba(0, 255, 136, 0.9);
   color: #000;
   font-weight: 600;
@@ -640,4 +640,161 @@ canvas {
   font-size: 18px;
   z-index: 10;
   border-radius: 15px;
+}
+
+
+.camera-modal-body {
+  padding: 0;
+  background: #000;
+  position: relative;
+}
+
+.camera-modal-card-title {
+  position: absolute;
+  top: 16px;
+  left: 16px;
+  z-index: 20;
+  cursor: pointer;
+  color: #fff;
+}
+
+.camera-video-container {
+  position: relative;
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background: #000;
+}
+
+.camera-video-tag {
+  max-width: 100%;
+  max-height: 100%;
+  width: 100%;
+  height: auto;
+  object-fit: contain;
+  transition: opacity 0.3s ease-in-out;
+}
+
+.camera-scanner-frame {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  width: min(85vw, 520px);
+  aspect-ratio: 1.586;
+  border: 2px dashed #00ff88;
+  box-shadow: 0 0 18px #00ff88;
+  border-radius: 12px;
+  pointer-events: none;
+}
+
+.camera-scanner-lines {
+  position: absolute;
+  width: 100%;
+  height: 2px;
+  background: #00ff88;
+  animation: scanMove 2s linear infinite;
+}
+
+.camera-scanner-flash {
+  position: absolute;
+  inset: 0;
+  background: white;
+  opacity: 0.4;
+  pointer-events: none;
+}
+
+.camera-canvas {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  pointer-events: none;
+  object-fit: contain;
+}
+
+.camera-capture-action-button {
+  position: absolute;
+  bottom: 30px;
+  width: 100%;
+  text-align: center;
+  z-index: 10;
+  border-radius: 8px;
+  padding: 15px;
+}
+
+.emirate-guide-message {
+  color: #fff;
+  font-weight: 600;
+  margin-bottom: 10px;
+}
+
+.emirate-guide-message-box {
+  position: absolute;
+  bottom: 30px;
+  width: 100%;
+  text-align: center;
+  z-index: 10;
+}
+
+.camera-modal-close-btn {
+  position: absolute;
+  top: 16px;
+  right: 16px;
+  z-index: 20;
+  cursor: pointer;
+}
+
+.crop-document-image {
+  width: 100%;
+  max-width: 100%;
+  max-height: 500px;
+  margin: auto;
+  display: block;
+  border-radius: 8px;
+  object-fit: contain;
+}
+
+.document-crop-cavas-container {
+  position: relative;
+  width: 100%;
+  height: 100dvh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background: #000;
+}
+
+.document-crop-cavas {
+  max-width: 100%;
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  object-fit: contain;
+  border: 1px solid black;
+  touch-action: none;
+}
+
+.emirate-loader {
+  font-size: 20px;
+  color: white;
+  position: relative;
+  width: 100%;
+  height: 100dvh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background: rgb(0, 0, 0);
+}
+
+
+@media (max-width: 768px) {
+  .emirate-loader {
+    font-size: 16px;
+    height: 200px;
+  }
 }
